added back kaomoji site url bug

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link rel="apple-touch-icon" href="/images/Logo.png"/>
   <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="http://return.github.io/Kaomoji/favicon.ico" />
 
-  <link rel="stylesheet" href="/assets/normalize.css">
-  <link rel="stylesheet" href="/assets/main.css">
+  <link rel="stylesheet" href="http://return.github.io/Kaomoji/assets/normalize.css">
+  <link rel="stylesheet" href="http://return.github.io/Kaomoji/assets/main.css">
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   <link href='http://fonts.googleapis.com/css?family=Volkhov:400,400italic' rel='stylesheet' type='text/css'>
 
