Available on the App Store.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <hr>
 <br>
 <div class="dl">
-[ Coming Soon to the App Store ]
+<a href="https://itunes.apple.com/us/app/kaomoji/id1025701729?ls=1&mt=12"><img class="dl-badge" src="http://return.github.io/Kaomoji/images/mac_badge.svg"></img></a>
 <br>
 </div>
 <br>
