--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="content">
         <br>
 <br>
-<p><b>Kaomoji</b> is a simple Mac application that lets you directly copy random, popular and most used kaomojis/emojicons hosted from <a href="http://emojicons.com">emojicons.com</a> straight from the Mac statusbar.</p>
+<p><b>Kaomoji</b> is a simple Mac application that lets you directly copy random, popular and the most used kaomojis/emojicons hosted on <a href="http://emojicons.com">emojicons.com</a> straight from the Mac statusbar.</p>
 <p><b>No ⌘ + C required. ¯\_(ツ)_/¯</b></p>
 <br>
 <hr>
@@ -65,8 +65,8 @@
 </div>
 <br>
 <hr/>
-<small>Made by <a href="https://github.com/return">return0xe</a></small>
-<small class="footer_rights">© 2015 Calvin Hill</small>
+<small>Made by <a href="https://github.com/return">return0e</a></small>
+<small class="footer_rights">© 2017 Joseph Calvin Hill</small>
       </div>
       
     </main>
