--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <br>
 <hr/>
 <small>Made by <a href="https://github.com/return">return0e</a></small>
-<small class="footer_rights">© 2017 Joseph Calvin Hill</small>
+<small class="footer_rights">© 2017 - Joseph 'Calvin' Hill</small>
       </div>
       
     </main>
